objects/ASI_CRM_CN_Channel_Group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Channel_Group_Chi_Name__c</fullName>
        <label>Channel Group Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Group_Code__c</fullName>
        <label>Channel Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Group_Eng_Name__c</fullName>
        <label>Channel Group Eng Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Channel Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel_Group_Chi_Name__c</columns>
        <columns>ASI_CRM_Channel_Group_Code__c</columns>
        <columns>ASI_CRM_Channel_Group_Eng_Name__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Channel Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Groups</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Channel_Group</fullName>
        <active>true</active>
        <label>CN Channel Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>